--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/regalc/">LinkedIn</a>
-    <a class="footer-link" href="https://www.public.tableau.com/app/profile/Regal.Chhit">Tableau Portfolio</a>
+    <a class="footer-link" href="https://public.tableau.com/app/profile/regal.chhit#!/">Tableau Portfolio</a>
     <a class="footer-link" href="https://www.kaggle.com/regall">My Kaggle</a>
-    <a class="footer-link" href="https://github.com/RegalCodes/RegalCodes">My GitHub"</a>
+    <a class="footer-link" href="https://github.com/RegalCodes/RegalCodes">My GitHub</a>
     <p class="copyright">© 2022 Regal Chhit</p>
   </div>
 </body>
