--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
         <h3>Programming</h3>
-        <p>My passion grew for programming when I was able to make a lot of my favorite childhood games, and I was able to create a lot of other cool things. I can code in Python, HTML, CSS</p>
+        <p>My passion grew for programming when I was able to make a lot of my favorite childhood games, and I was able to create a lot of other cool things. I can code in Python, R, HTML, CSS, and Javascript</p>
         <p> <a href="https://github.com/RegalCodes/RegalCodes">My Github</a> <span> <a href="Regals Mystery Box Website/index.html">My Mystery Box Website</a></span> <a href="Regals_Drum_Set/index.html">My Interactive Drum Set</a></span> </p> 
 
       </div>
