--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <img class="basketball-img" src="https://media1.giphy.com/media/q5hVhkKwKHDuo/giphy.gif?cid=ecf05e479fkcfhep6149cvh36kc4vtki5fxwtkm0gr6h3hki&rid=giphy.gif&ct=g" alt="basketball-img">
 
         <h3>Basketball</h3>
-        <p> My favorite sport is basketball, and I like playing it recreationally. I play a lot with my friends and family or I would play at the park. I also like going to NBA games </p>
+        <p> My favorite sport is basketball, and I like playing it recreationally. I play a lot with my friends and family or I would play at the park. I also like going to NBA games. </p>
 
       </div>
     </div>
