--- a/index.html
+++ b/index.html
@@ -49,7 +49,18 @@
 
 
       <div class="skills">
-        <h2>My Hobby</h2>
+        <h2>My Hobbies</h2>
+        
+
+        <div class="skill-row">
+          <img class="mario-img" src="https://media3.giphy.com/media/JkQW0NsfGJYWI/giphy.gif?cid=ecf05e47lgcfy50ltkihtgkyuwe87r3boovbrxv5dxeerdb9&rid=giphy.gif&ct=g" alt="mariokart">
+
+          <h3>Gaming</h3>
+          <p> When I want to relax and have fun, I sometimes play video games on Playstation, computer, or Nintendo Switch. Games I currently/used to play are Mario Kart, Super Smash Bros, League of Legends, Overwatch, UFC4, NBA2K, CounterStrike, Apex Legends etc..
+        </div>
+
+        <br />
+       
       <div class="skill-row">
         <img class="basketball-img" src="https://media1.giphy.com/media/q5hVhkKwKHDuo/giphy.gif?cid=ecf05e479fkcfhep6149cvh36kc4vtki5fxwtkm0gr6h3hki&rid=giphy.gif&ct=g" alt="basketball-img">
 
