--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
 
         <div class="skill-row">
-          <img class="mario-img" src="https://media3.giphy.com/media/JkQW0NsfGJYWI/giphy.gif?cid=ecf05e47lgcfy50ltkihtgkyuwe87r3boovbrxv5dxeerdb9&rid=giphy.gif&ct=g" alt="mariokart">
+          <img class="data-img" src="https://media3.giphy.com/media/JkQW0NsfGJYWI/giphy.gif?cid=ecf05e47lgcfy50ltkihtgkyuwe87r3boovbrxv5dxeerdb9&rid=giphy.gif&ct=g" alt="mariokart">
 
           <h3>Gaming</h3>
           <p> When I want to relax and have fun, I sometimes play video games on Playstation, computer, or Nintendo Switch. Games I currently/used to play are Mario Kart, Super Smash Bros, League of Legends, Overwatch, UFC4, NBA2K, CounterStrike, Apex Legends etc..
