--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud">
     <div class="title-text">
       <h1>I'm Regal.</h1>
-      <h2>a data analyst and programmer</h2>
+      <h2>I love working with data</h2>
     </div>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
     <img class="mountain" src="images/mountain.png" alt="mountain-img">
@@ -24,7 +24,7 @@
     <div class="profile">
 
       <h2>Hello!</h2>
-      <p class="intro">I love to learn, and I challenge myself everyday by learning new skills or by improving what I know. I wanted to be an analyst or programmer because I had a lot of fun working on projects.</p>
+      <p class="intro">I love to learn, and I challenge myself everyday by learning new skills or by improving what I know. I have fun adding value when utilizing skills I've developed</p>
     </div>
     <hr>
     <div class="skills">
@@ -42,7 +42,7 @@
 
 
         <h3>Programming</h3>
-        <p>My passion grew for programming when I was able to make a lot of my favorite childhood games, and I was able to create a lot of other cool things. I can code in Python, R, HTML, CSS, and Javascript. </p>
+        <p> Programming is a passion of mine, especially when I utilize it to automate things that makes my life easier. I can code in Python, Kotlin, R, HTML, CSS, and Javascript. </p>
         <p> <a href="https://github.com/RegalCodes/RegalCodes">My Github</a> <span> <a href="Regals Mystery Box Website/index.html">My Mystery Box Website</a></span> <a href="Regals_Drum_Set/index.html">My Interactive Drum Set</a></span> </p> 
 
       </div>
@@ -56,7 +56,7 @@
           <img class="data-img" src="https://media3.giphy.com/media/JkQW0NsfGJYWI/giphy.gif?cid=ecf05e47lgcfy50ltkihtgkyuwe87r3boovbrxv5dxeerdb9&rid=giphy.gif&ct=g" alt="mariokart">
 
           <h3>Gaming</h3>
-          <p> When I want to relax and have fun, I sometimes play video games on Playstation, computer, or Nintendo Switch. Games I currently/used to play are Mario Kart, Super Smash Bros, League of Legends, Overwatch, UFC4, NBA2K, CounterStrike, Apex Legends etc..
+          <p> When I want to relax and have fun, I sometimes play video games on Playstation or PC. Lately I've been playing UFC 5 and Overwatch 2. 
         </div>
 
         <br />
@@ -65,7 +65,7 @@
         <img class="basketball-img" src="https://media1.giphy.com/media/q5hVhkKwKHDuo/giphy.gif?cid=ecf05e479fkcfhep6149cvh36kc4vtki5fxwtkm0gr6h3hki&rid=giphy.gif&ct=g" alt="basketball-img">
 
         <h3>Basketball</h3>
-        <p> My favorite sport is basketball, and I like playing it recreationally. I play a lot with my friends and family or I would play at the park. I also like going to NBA games. </p>
+        <p> I love playing basketball, I think I'm a better defender than I am on offense but offense is a lot more fun. I always try to take high percentage shots and I do that by going to the rim. </p>
 
       </div>
     </div>
