--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
 
 
       <div class="skill-row">
+
+        <h3>Operations Management</h3>
+        <p> I love having a great relationship with my team. I've developed my leadership skills a lot throughout my years at Amazon and Tesla. I develop all of those that report directly to me and those who seek guidance and help I create process improvement projects and identify changes through value stream mapping. It only makes sense to run your operations at maximum efficiency, and I use data to do that. 
+
+
+      </div>
+
+
+      <div class="skill-row">
         <img class="data-img" src="https://media3.giphy.com/media/c7PcKQlOqZ8Ws/giphy.gif?cid=ecf05e47jgupee9nsweeg9ck6o8sf75zljvtnhuxxnh4st6b&rid=giphy.gif&ct=g" alt="data-img">
 
         <h3>Data Analysis</h3>
