--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud">
     <div class="title-text">
-      <h1>I'm Regal.</h1>
+      <h1>Hi, My name is Regal.</h1>
     </div>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
     <img class="mountain" src="images/mountain.png" alt="mountain-img">
