--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img class="data-img" src="https://media3.giphy.com/media/c7PcKQlOqZ8Ws/giphy.gif?cid=ecf05e47jgupee9nsweeg9ck6o8sf75zljvtnhuxxnh4st6b&rid=giphy.gif&ct=g" alt="data-img">
 
         <h3>Data Analysis</h3>
-        <p> I like to gather data, and clean it up to see what insights I can pull from the data set when analyzing. The most enjoyable part is seeing the results. I have done many projects utilizing Python, R, Spreadsheets, Tableau, PowerBI.
+        <p> I like to gather data, and clean it up to see what insights I can pull from the data set when analyzing. The most enjoyable part is seeing the results. I have done many projects utilizing Python, R, Spreadsheets, Tableau, PowerBI. 
         <p> <a href="https://www.kaggle.com/regall">My Kaggle</a> <span> <a href="https://public.tableau.com/app/profile/regal.chhit">My Tableau Portfolio</a></span> <span> <a href="powerbi.html">My PowerBi Portfolio</a></span></p>
 
       </div>
@@ -101,7 +101,7 @@
       <div class="skill-row">
 
         <h3>Basketball</h3>
-        <p> I love playing basketball, I think I'm a better defender than I am on offense but offense is a lot more fun. I always try to take high percentage shots and I do that by going to the rim. </p>
+        <p> I love playing basketball, I often play with my coworkers. I think I'm a better defender than I am on offense but offense is a lot more fun. I always try to take high percentage shots and I do that by going to the rim. </p>
 
       </div>
 
